# istio-pirate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  xmake.lua
admission-controller/: CMakeLists.txt
admission-controller/k8s-resources/: demo-deployment.yaml  mutating-svc.yaml  mutatingwebhook.yaml
admission-controller/pkg/RESTClient/: README.md
admission-controller/pkg/ResourceType/: README.md
admission-controller/pkg/ResourceType/include/: Marshal.h  ResList.h
admission-controller/pkg/ResourceType/include/admission/v1/: types.h
admission-controller/pkg/ResourceType/include/core/v1/: types.h
admission-controller/pkg/ResourceType/include/goraw/: types.h
admission-controller/pkg/ResourceType/include/meta/v1/: types.h
admission-controller/pkg/ResourceType/test/: test.cpp
admission-controller/src/: main.cpp
init-image/: Dockerfile  Readme.md  init.sh  readme.md
pilot/: CMakeLists.txt  Makefile
pilot/docker-build/: Dockerfile
pilot/k8s-resources/: pilot-namespace.yaml  pilot-role.yaml  pilot-serviceAccount.yaml  pilot-test.yaml  pilot_role-bind-pilot_account.yaml
pilot/src/: main.cpp
src/: ModifyYaml.cpp  ModifyYaml.hpp  main.cpp
yaml-inject/: CMakeLists.txt  Readme.md  modified-pod.yaml  pod.yaml
yaml-inject/src/: ModifyYaml.cpp  ModifyYaml.hpp  main.cpp
